Update .gitignore to avoid tracking data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Folders to ignore - files may be too large, too many, etc. NOTE: EDIT IF NEEDED.
+data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
