--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ target/
 # exclude data from source control by default
 /data/
 
+# exclude references from source control by default
+/references/
+
 # Mac OS-specific storage files
 .DS_Store
 
