--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Folders to ignore - files may be too large, too many, etc. NOTE: EDIT IF NEEDED.
 data
+reports
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
