--- a/config/config.yaml
+++ b/config/config.yaml
@@ -80,8 +80,11 @@ download:
       vuln:
         social:
           # CEJST and low moderate income designations available for the whole country
+          # I'm having trouble downloading lmi from the url endpoint
+          # so just downloaded that separately from
+          # https://www.hudexchange.info/sites/onecpd/assets/File/ACS_2015_lowmod_blockgroup_all.xlsx
+          # and uploaded it the raw/ directory
           cejst: "https://static-data-screeningtool.geoplatform.gov/data-versions/1.0/data/score/downloadable/1.0-communities.csv"
-          lmi: "https://www.hudexchange.info/sites/onecpd/assets/File/ACS_2015_lowmod_blockgroup_all.xlsx"
       ref:
         # County and zip code tabulation area spatial data available for the whole country
         county: "https://www2.census.gov/geo/tiger/TIGER2022/COUNTY/tl_2022_us_county.zip"
